05 - Changes the auth method. Now users will be loggin with their emails

--- a/05 -  Inventory Management (Full Backen)/src/main/resources/static/index.html
+++ b/05 -  Inventory Management (Full Backen)/src/main/resources/static/index.html
@@ -34,12 +34,12 @@
     <div class="boxes">
         <div class="box">
             <h4>
-                Insert your username
+                Insert your email
             </h4>
             <form action="/loggin" method="get"></form>
             <form action="/loggin" method="post">
                 <input class="name" type="hidden" name="_method" value="put">
-                <input class="name" type="text" name="name" placeholder="Name" >
+                <input class="name" type="email" name="email" placeholder="Email" >
                 <button class="button" type="submit">loggin</button>
 
 <!--                <input class="name" type="text" name="name" placeholder="name" >-->
