05 - Created the form to validate user email

--- a/05 -  Inventory Management (Full Backen)/src/main/resources/static/adduser.html
+++ b/05 -  Inventory Management (Full Backen)/src/main/resources/static/adduser.html
@@ -40,11 +40,7 @@
             <form action="/loggin" method="post">
                 <input class="name" type="hidden" name="_method" value="put">
                 <input class="name" type="email" name="email" placeholder="Email" >
-                <button class="button" type="submit">Loggin</button>
-                <h4 class="create">
-                    <a href="adduser.html">Create Account</a>
-                </h4>
-
+                <button class="button" type="submit">loggin</button>
 
 <!--                <input class="name" type="text" name="name" placeholder="name" >-->
 <!--                <input class="email" type="text" name="email" placeholder="email" >-->
