--- a/05 -  Inventory Management (Full Backen)/src/main/resources/static/adduser.html
+++ b/05 -  Inventory Management (Full Backen)/src/main/resources/static/adduser.html
@@ -32,23 +32,19 @@
 <body>
 <div class="container">
     <div class="boxes">
-        <div class="box">
+        <div class="boxa">
             <h4>
-                Insert your email
+                We almost done
             </h4>
             <form action="/loggin" method="get"></form>
             <form action="/loggin" method="post">
                 <input class="name" type="hidden" name="_method" value="put">
-                <input class="name" type="email" name="email" placeholder="Email" >
-                <button class="button" type="submit">loggin</button>
+                <input class="name" type="text" name="name" placeholder="name" >
+                <input class="email" type="text" name="email" placeholder="email" >
+                <input class="email" type="text" name="email" placeholder="email" >
 
-<!--                <input class="name" type="text" name="name" placeholder="name" >-->
-<!--                <input class="email" type="text" name="email" placeholder="email" >-->
-<!--                <input class="creditcard" type="text" name="creditcard" placeholder="creditcard" >-->
+                <button class="button" type="submit">Create</button>
 
-                <!--                <h4>-->
-                <!--                    Create and account-->
-                <!--                </h4>-->
 
             </form>
         </div>
