05 - I got a bug adding users, so im gonna skip it for a while

--- a/05 -  Inventory Management (Full Backen)/src/main/resources/static/adduser.html
+++ b/05 -  Inventory Management (Full Backen)/src/main/resources/static/adduser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="zxx">
 <head>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>adduser</title>
     <style>
         body {
@@ -34,7 +34,7 @@
     <div class="boxes">
         <div class="boxa">
             <h4>
-                We almost done
+                We have almost done
             </h4>
             <form action="/adduser" method="get"></form>
             <form action="/adduser" method="post">
@@ -47,7 +47,7 @@
             </form>
         </div>
     </div>
-    <!--    <h1>Seacrh Persons</h1>-->
+    <!--    <h1>Search Persons</h1>-->
 
     <script>
         document.querySelector('form').addEventListener('submit', function(event) {
